[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pyautogui>=0.9.54",
    "sahi>=0.11.36",
    "seaborn>=0.13.2",
    "ultralytics>=8.4.6",
    "umap-learn>=0.5.11",
    "xaitk-saliency>=0.14.1",
]
